--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,34 +1,3 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 ja:
   activerecord:
     attributes:
@@ -46,8 +15,10 @@ ja:
         password_confirmation: 確認用パスワード
         remember_me: 次回から自動的にログイン
       advisor:
+        code: 人物コード
         rank: 顧客レベル
         name: 氏名
+        kana: フリガナ
         company: 会社
         company_short_name: 会社（略称）
         position: 役職
@@ -64,8 +35,10 @@ ja:
         contact_email: 担当者メールアドレス
         editor_code: 編集ユーザーID
       customer:
+        code: 人物コード
         rank: 顧客レベル
         name: 氏名
+        kana: フリガナ
         company: 会社
         company_short_name: 会社（略称）
         position: 役職
